crates/wdl-engine/tests/tasks/enum-type-name-command-interpolation/error.txt
error: cannot coerce type `Status` to `String`
   ┌─ tests/tasks/enum-type-name-command-interpolation/source.wdl:11:12
   │
11 │     echo ~{Status}
   │            ^^^^^^ this is type `Status`

